--- a/frontend/src/components/SignupForm/SignupForm.css
+++ b/frontend/src/components/SignupForm/SignupForm.css
@@ -34,7 +34,7 @@ top: 0;
 left: 0;
 width: 50%;
 margin: 5px;
-color: #999;
+color: #ccc;
 padding: 10px;
 box-shadow: none;
 border: 1px solid #ccc;
