--- a/frontend/src/components/SignupForm/SignupForm.css
+++ b/frontend/src/components/SignupForm/SignupForm.css
@@ -18,37 +18,93 @@ h3 {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
-.signup-info {
+.signup-form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 30px 0 0;
 }
 
-.signup-info input {
-font-family: 'Roboto', Arial, Helvetica, sans-serif;
-font-weight: 400;
-text-transform: none;
-height: 30px;
-top: 0;
-left: 0;
-width: 50%;
-margin: 5px;
-color: #ccc;
-padding: 10px;
-box-shadow: none;
-border: 1px solid #ccc;
-outline: none;
-border-radius: 2px;
+.signup-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 500px;
+}
+
+.signup-info input{
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    height: 30px;
+    width: 80%;
+    margin: 5px;
+    color: #999;
+    padding: 10px;
+    box-shadow: none;
+    border: 1px solid #999;
+    outline: none;
+    border-radius: 2px;
+    margin-left: 50px;
+    transition: all .15s ease-out;
 }
 
 .signup-info input:hover {
     border-color: orange;
+    cursor: default;
 }
 
 .signup-button {
     background-color: #ef6c00;
     color: #fff;
-    border: 0.1rem solid #ef6c00;
-    font-weight: 700;
+    border: 1.6px solid #ef6c00;
+    font-weight: 600;
+    cursor: pointer;
+    height: 50px;
+    width: 350px;
+    border-radius: 4px;
+    font-size: 17px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.signup-button:hover {
+    background-color: rgb(155, 89, 9);
+    border-color: rgb(155, 89, 9);
+}
+
+.sign-in-link-from-signup {
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    color: #555;
+}
+
+
+.sign-in-link-from-signup a {
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    font-weight: 400;
+    font-size: 17px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+    background-color: #fff;
+    color: #163977;
+    border: 1px solid #163977;
+    padding: 10px;
+    width: 330px;
+    height: 30px;
+    margin-top: 20px;
+}
+
+.sign-in-link-from-signup a:hover {
+    background-color: rgb(222, 231, 242);
+}
+
+.password-tips {
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    color: #555;
+    padding: 10px;
 }
