--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -12,19 +12,20 @@
 
 .login-form-title {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    font-size: 24px;
-    margin: -7px 0px 24px -300px;
+    font-size: 32px;
+    margin: -7px 650px 24px 0px;
     padding: 30px 0px 0px;
     color: #333;
 }
 
 #signin-button {
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
     background-color: #ef6c00;
     color: #fff;
     border: 1.6px solid #ef6c00;
     font-weight: 600;
-    height: 50px;
-    width: 50px;
+    height: 45px;
+    width: 120px;
     border-radius: 4px;
     font-size: 17px;
     margin-top: 20px;
@@ -84,7 +85,7 @@
 .login-page p {
     font-size: 14px;
     color: black;
-    margin: -6px 0px 21px;
+    margin: 10px;
 }
 
 .login-page a {
@@ -101,8 +102,6 @@
     padding: 10px;
     width: 330px;
     height: 30px;
-    margin-top: 20px;
-    position: relative;
 }
 
 .login-page a:hover {
