Started NavBar dropdown

--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -2,15 +2,16 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: auto;
 }
 
 .login-form-title {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     font-size: 32px;
-    margin: -7px 650px 24px 0px;
+    margin: -7px 575px 24px 0px;
     padding: 30px 0px 0px;
     color: #333;
+    display: block;
+    text-align: center;
 }
 
 #signin-button {
@@ -39,18 +40,20 @@
     border-radius: 5px;
     box-shadow: 0 1px 0 0 #ccc;
     padding: 35px 50px;
+    width: 15%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-top: 20px;
 }
 
 .login-info input{
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     font-weight: 400;
     height: 30px;
-    width: 80%;
+    width: 90%;
     margin: 5px;
-    color: #999;
+    color: black;
     padding: 10px;
     box-shadow: none;
     border: 1px solid #999;
@@ -64,11 +67,11 @@
     cursor: default;
 }
 
-.login-page > label {
+.login-new-customer > h3 {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     color: #4caf50;
     font-size: 24px;
-    margin: 5px 0px 15px;
+    margin: 5px 0px 5px;
 }
 
 .login-form > h3 {
@@ -78,13 +81,14 @@
     margin: 5px 0px 15px;
 }
 
-.login-page p {
+.login-new-customer {
     font-size: 14px;
     color: black;
-    margin: 10px;
+    padding: 55px 0 0 75px;
+    width: 15%;
 }
 
-.login-page a {
+.login-new-customer a {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     cursor: pointer;
     font-weight: 400;
@@ -96,11 +100,11 @@
     color: #163977;
     border: 1px solid #163977;
     padding: 10px;
-    width: 330px;
+    width: 400px;
     height: 30px;
 }
 
-.login-page a:hover {
+.login-new-customer a:hover {
     background-color: rgb(222, 231, 242);
 }
 
@@ -109,7 +113,8 @@
     font-size: 16px;
     background-color: #f9e0e4;
     border: 1px solid #d0011b;
-    width: 800px;
+    border-radius: 6px;
+    width: 715px;
     padding: 15px;
     display: flex;
     justify-content: flex-start;
