--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,4 +1,6 @@
 .nav-bar {
+    display: flex;
+    justify-content: space-evenly;
     background-color: rgb(36, 76, 187);
     height: 100px;
 }
@@ -9,4 +11,53 @@
     margin-left: 350px;
 }
 
+
+.splash-nav-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 0px;
+    background-color: white;
+    text-align: center;
+    width: 20vw;
+    height: 20vw;
+    box-shadow: 0 1px 3px 1px black;
+    border-radius: 3px;
+}
+
+.splash-nav-links #login {
+    color: white;
+    background-color: rgb(36, 76, 187);
+    text-decoration: none;
+    padding: 10px;
+    width: 50%;
+}
+
+.splash-nav-links #create {
+    color: rgb(36, 76, 187);
+    background-color: white;
+    border: 1px solid rgb(36, 76, 187);
+    text-decoration: none;
+    padding: 10px;
+    width: 50%;
+}
+
+.DropDown:hover {
+    background-color: rgb(33, 69, 168);
+    cursor: pointer;
+}
+
+.DropDown {
+    position: relative;
+    color: white;
+    padding: 5px;
+    width: fit-content;
+    height: fit-content;
+}
+
+.logout-from-dropdown {
+    position: absolute;
+}
 
