--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&family=Roboto:wght@300;400&display=swap");
+
 .nav-bar {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     background-color: rgb(36, 76, 187);
     height: 100px;
 }
@@ -21,8 +23,8 @@
     right: 0px;
     background-color: white;
     text-align: center;
-    width: 20vw;
-    height: 20vw;
+    width: 15vw;
+    height: 10vw;
     box-shadow: 0 1px 3px 1px black;
     border-radius: 3px;
 }
@@ -32,7 +34,11 @@
     background-color: rgb(36, 76, 187);
     text-decoration: none;
     padding: 10px;
-    width: 50%;
+    width: 70%;
+    font-family: 'Poppins';
+    font-size: 12px;
+    border-radius: 20px;
+    margin: 10px;
 }
 
 .splash-nav-links #create {
@@ -41,7 +47,11 @@
     border: 1px solid rgb(36, 76, 187);
     text-decoration: none;
     padding: 10px;
-    width: 50%;
+    width: 70%;
+    font-family: 'Poppins';
+    font-size: 12px;
+    border-radius: 20px;
+    margin: 10px;
 }
 
 .DropDown:hover {
@@ -52,12 +62,38 @@
 .DropDown {
     position: relative;
     color: white;
-    padding: 5px;
+    padding: 10px;
+    font-family: 'Poppins';
+    font-size: 16px;
+    font-weight: 700;
     width: fit-content;
     height: fit-content;
 }
 
 .logout-from-dropdown {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
+    right: 0px;
+    background-color: white;
+    text-align: center;
+    width: 15vw;
+    height: 10vw;
+    box-shadow: 0 1px 3px 1px black;
+    border-radius: 3px;
+    
 }
 
+#logout-drop-button {
+    color: white;
+    background-color: rgb(36, 76, 187);
+    text-decoration: none;
+    padding: 10px;
+    width: 70%;
+    font-family: 'Poppins';
+    font-size: 12px;
+    border-radius: 20px;
+    cursor: pointer;
+}
