--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 
 .login-form-title {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     font-size: 32px;
-    margin: -7px 575px 24px 0px;
+    margin: -7px 500px 24px 0px;
     padding: 30px 0px 0px;
     color: #333;
     display: block;
@@ -40,7 +41,7 @@
     border-radius: 5px;
     box-shadow: 0 1px 0 0 #ccc;
     padding: 35px 50px;
-    width: 15%;
+    width: 20%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -84,8 +85,8 @@
 .login-new-customer {
     font-size: 14px;
     color: black;
-    padding: 55px 0 0 75px;
-    width: 15%;
+    padding-left: 75px;
+    width: 20%;
 }
 
 .login-new-customer a {
