--- a/frontend/src/components/ProductsIndex/ProductsIndex.css
+++ b/frontend/src/components/ProductsIndex/ProductsIndex.css
@@ -2,5 +2,53 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
+    margin: auto;
+    padding: 10px;
+}
+
+.products-index li {
+    width: 200px;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    border: 1px solid lightgrey;
+    background-color: whitesmoke;
+    border-radius: 5px;
+    margin: auto;
+}
+
+.products-index img {
+height: 50%;
+width: 75%;
+}
+
+.products-index p {
+    font-family: 'Poppins';
+    font-size: 14px;
+    padding: 5px;
+}
+
+#index-price {
+    color: #bc2848;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.add-to-cart-from-splash {
+    font-family: 'Poppins';
+    background-color: #ef6c00;
+    color: #fff;
+    border: 1.6px solid #ef6c00;
+    font-weight: 700;
+    width: 80%;
+    border-radius: 20px;
+    font-size: 12px;
+    padding: 10px;
+}
+
+.add-to-cart-from-splash:hover {
+    cursor: pointer;
+    background-color: #ef8126;
 }
