Added products index stlying

--- a/frontend/src/components/ProductsIndex/ProductsIndex.css
+++ b/frontend/src/components/ProductsIndex/ProductsIndex.css
@@ -42,10 +42,12 @@ width: 75%;
     color: #fff;
     border: 1.6px solid #ef6c00;
     font-weight: 700;
-    width: 80%;
+    width: 75%;
     border-radius: 20px;
     font-size: 12px;
     padding: 10px;
+    margin-top: auto;
+    margin-bottom: 15px;
 }
 
 .add-to-cart-from-splash:hover {
