--- a/frontend/src/components/ProductShow/ProductShow.css
+++ b/frontend/src/components/ProductShow/ProductShow.css
@@ -1,8 +1,7 @@
 .product-show-page {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    border: 3px solid blue;
+    justify-content: center;
+    padding: 20px;
 }
 
 .product-show-info h1 {
@@ -12,21 +11,25 @@
 }
 
 #product-show-img {
-    width: 15%;
-    border: 3px solid red;
+    height: 300px;
+    width: 200px;
+    margin-right: 100px;
+    padding: 20px;
 }
 
 .product-show-info {
     display: flex;
     flex-direction: column;
-    width: 50%;
-    border: 3px solid green;
+    height: 300px;
+    width: 400px;
+    margin-left: 50px;
 }
 
 #category {
     font-size: 12px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #1c49c2;
+    margin: 20px 0 10px 100px;
 }
 
 .show-divider {
@@ -60,12 +63,10 @@
     color: #fff;
     border: 1.6px solid #ef6c00;
     font-weight: 700;
-    width: 75%;
+    width: 100%;
     border-radius: 20px;
     font-size: 12px;
     padding: 10px;
-    margin-top: auto;
-    margin-bottom: 15px;
 }
 
 .add-to-cart-from-show:hover {
@@ -75,11 +76,63 @@
 
 .dropdown-buttons-container-show {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #EEEEEE;
-    border-radius: 5px;
-    width: 330px;
-    height: 200px;
+    flex-direction: column;
+    border: 2px solid #EEEEEE;
+    border-radius: 7px;
+    padding: 20px;
+    height: 130px;
+    width: 250px;
+    margin-left: 40px;
+}
 
+.product-show-info button {
+    background-color: white;
+    color: #1c49c2;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+    border: 1px solid rgb(222, 234, 248);
+    padding: 10px;
+    border-radius: 7px;
+    margin: 5px;
+}
+
+.product-show-info button:hover {
+    background-color: rgb(222, 234, 248);
+    cursor: pointer;
+}
+
+.flavors button:focus {
+    background-color: rgb(222, 234, 248);
+    border: 2px solid  #1c49c2;;
+}
+
+.sizes button:focus {
+    background-color: rgb(222, 234, 248);
+    border: 2px solid  #1c49c2;;
+}
+
+.flavors {
+    display: flex;
+    justify-content: flex-start;
+    margin: auto;
+}
+
+.sizes {
+    display: flex;
+    justify-content: flex-start;
+    margin: auto;
+}
+
+.product-show-details h2 {
+    font-family: 'Poppins';
+    font-size: 18px;
+    margin: 10px;
+    font-weight: 700;
+}
+
+.product-show-details p {
+    color: #4d4d4d;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+    margin: 10px;
 }
