--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -6,6 +6,7 @@
     align-items: center;
     background-color: rgb(36, 76, 187);
     height: 100px;
+    /* position: sticky; NOT WORKING*/
 }
 
 .logo {
