--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -91,6 +91,7 @@
     color: white;
     background-color: rgb(36, 76, 187);
     text-decoration: none;
+    outline: none;
     padding: 10px;
     width: 70%;
     font-family: 'Poppins';
