--- a/frontend/src/components/ProductShow/ProductShow.css
+++ b/frontend/src/components/ProductShow/ProductShow.css
@@ -161,13 +161,101 @@
 .product-show-details h2 {
     font-family: 'Poppins';
     font-size: 18px;
-    margin: 10px;
+    margin: auto;
     font-weight: 700;
+    padding: 50px;
 }
 
 .product-show-details p {
     color: #4d4d4d;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 14px;
+    margin: auto;
+    padding: 0 50px 0 50px;
+}
+
+.reviews {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: auto;
+    padding: 50px;
+}
+
+.reviews h1 {
+    font-family: 'Poppins';
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.reviews a {
+    text-decoration: none;
+    width: fit-content;
+}
+
+#review-link:hover {
+    text-decoration: underline;
+}
+
+.review-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 75%;
+    margin: auto;
+}
+
+#review {
+    border: 1px solid #eee;
+    width: 75%;
+    padding: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.review-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.review-buttons button, .review-buttons a {
+    color: white;
+    background-color: rgb(36, 76, 187);
+    border: none;
+    text-decoration: none;
+    padding: 10px;
+    font-family: 'Poppins';
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 20px;
+    cursor: pointer;
     margin: 10px;
+}
+
+.review-buttons button:hover, .review-buttons a:hover {
+    background-color: rgb(47, 92, 184);
+}
+
+
+.review-list p {
+    font-family: 'Poppins';
+    color: #4d4d4d;
+    font-size: 12px;
+    padding: 5px;
+}
+
+.review-list h3 {
+    font-family: 'Poppins';
+    font-size: 14px;
+    font-weight: 700;
+    padding: 5px;
+}
+
+#review-body {
+    font-family: 'Poppins';
+    font-size: 14px;
+    color: black;
+    padding: 5px;
 }
