--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -6,7 +6,8 @@
     align-items: center;
     background-color: rgb(36, 76, 187);
     height: 100px;
-    /* position: sticky; NOT WORKING*/
+    top: 0;
+    position: sticky;
 }
 
 .logo {
