--- a/frontend/src/components/ProductsIndex/ProductsIndex.css
+++ b/frontend/src/components/ProductsIndex/ProductsIndex.css
@@ -16,7 +16,7 @@
     border: 1px solid lightgrey;
     background-color: whitesmoke;
     border-radius: 5px;
-    margin: auto;
+    margin: 20px;
 }
 
 .products-index img {
