--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -101,8 +101,41 @@
     cursor: pointer;
 }
 
-.searchbar {
+
+.searchbar-container {
+    display: flex;
+    padding: 5px;
     width: 600px;
-    height: 35px;
+    height: 30px;
     border-radius: 5px;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    background-color: white;
+}
+
+#search-input, #search-input:focus {
+    border: 0;
+    outline: none;
+    width: 100%;
+    height: 100%;
+}
+
+#search-dropdown {
+    position: absolute;
+    top: 40px;
+    width: 100%;
+    left: 0;
+    background-color: white;
+}
+
+.search-dropdown-item {
+    padding: 10px;
+    cursor: pointer;
+    font-family: 'Poppins';
+    font-size: 12px;
+}
+
+.search-dropdown-item:hover {
+    background-color: rgb(238, 238, 238);
 }
