--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -140,7 +140,6 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: left;
-    z-index: -1;
 }
 
 #cart-index-item img {
@@ -214,4 +213,26 @@
 
 .cart-drop-item {
     border: 1px solid #eee;
+    font-family: 'Poppins';
+    font-size: 12px;
+}
+
+.cart-badge {
+    background-color: rgb(247, 200, 71);
+    border-radius: 50%;
+    font-family: 'Poppins';
+    font-size: 18px;
+    font-weight: 700;
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 12px;
+    left: 17px;
+}
+
+.icon-and-badge {
+    position: relative;
 }
