--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -43,6 +43,7 @@
     align-items: center;
     padding: 30px;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .empty-cart-page img {
@@ -80,6 +81,7 @@
     display: flex;
     flex-direction: column;
     width: 75%;
+    margin-bottom: 100px;
 }
 
 .cart-items-list ul {
