--- a/frontend/src/components/ProductShow/ProductShow.css
+++ b/frontend/src/components/ProductShow/ProductShow.css
@@ -140,20 +140,20 @@
 }
 
 
-.flavors button.selected, .sizes button.selected {
+.flavors button.selected, .sizes button.selected, .colors button.selected {
     background-color: rgb(222, 234, 248);
     border: 2px solid  #1c49c2;
 }
 
 
-.flavors p, .sizes p {
+.flavors p, .sizes p, .colors p {
     color: #4d4d4d;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 14px;
     width: 100%;
 }
 
-.sizes, .flavors {
+.sizes, .flavors, .colors {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
