--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -8,7 +8,13 @@
     font-size: 20px;
 }
 
-.carousel {
-    height: 25vw;
-    width: 50%;
+#carousel {
+    height: 10vw;
+    width: 10vw;
+}
+
+#carousel img {
+    object-fit: cover;
+    height: 10%;
+    width: 10%;
 }
